--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -266,11 +266,12 @@
     <!--yesno答案框-->
     <ControlTemplate x:Key="yesnoAnswerTemplate" TargetType="{x:Type c:NodeBase}">
         <Border Background="White" BorderBrush="DarkRed" BorderThickness="1" CornerRadius="4">
-            <Path x:Name="CP" StrokeThickness="2" Stroke="Black" Data="M2,2 4,8 L8,2"/>
+            <Path x:Name="CP" StrokeThickness="2" Stroke="Black" Data="M0,0 4,8 L10,0"
+                  VerticalAlignment="Center" HorizontalAlignment="Center"/>
         </Border>
         <ControlTemplate.Triggers>
             <Trigger Property="Name" Value="noNode">
-                <Setter Property="Data" Value="M3,3 L6,6 M3,6 L6,3" TargetName="CP"/>
+                <Setter Property="Data" Value="M0,0 L9,9 M9,0 L0,9" TargetName="CP"/>
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
