--- a/Controls/NodeEndYesNo.xaml
+++ b/Controls/NodeEndYesNo.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:c="clr-namespace:MultiBranchTexter.Controls"
              Loaded="NodeBase_Loaded" Width="80">
-    
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -13,7 +12,7 @@
                     <RowDefinition Height="24"/>
                     <RowDefinition Height="20"/>
                 </Grid.RowDefinitions>
-                <Border x:Name="bgBorder" Padding="6,0,6,0" Grid.Row="0" Grid.ColumnSpan="2"
+                <Border Padding="6,0,6,0" Grid.Row="0" Grid.ColumnSpan="2"
                         Background="AliceBlue" 
                         BorderBrush="DarkRed"
                         BorderThickness="1" CornerRadius="4">
