现在流程图的主要功能完成了

--- a/Controls/NodeButton.xaml
+++ b/Controls/NodeButton.xaml
@@ -9,7 +9,7 @@
         <ControlTemplate TargetType="{x:Type c:NodeBase}">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Border x:Name="bgBorder" Padding="10,4,10,4" Grid.Row="0"
@@ -55,7 +55,7 @@
                 </Border>
                 <!--等待点击-->
                 <Border x:Name="UpperBd" Background="Aqua" Grid.Row="0" Opacity="0.5"
-                        MouseDown="UpperBd_MouseDown"
+                        MouseDown="UpperBd_MouseDown" CornerRadius="4"
                         Visibility="Hidden"/>
                 <!--尾巴放置容器-->
                 <Border x:Name="endContainer" Grid.Row="1"/>
