--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -18,7 +18,190 @@
     <!--转换器-->
     <cvt:NumberToPercentStrConverter x:Key="numToPerCvt" />
 
+    
+    <!--右键菜单style-->
+    <Style TargetType="{x:Type ContextMenu}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="Grid.IsSharedSizeScope" Value="true" />
+        <Setter Property="HasDropShadow" Value="True" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ContextMenu}">
+                    <Border x:Name="Border"
+                            Background="{StaticResource nodeBgBrush}"
+                            BorderThickness="1"
+                            BorderBrush="{StaticResource mainColorBrush}">
+                        <StackPanel IsItemsHost="True"
+                                    KeyboardNavigation.DirectionalNavigation="Cycle" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <!-- TopLevelHeader -->
+    <ControlTemplate x:Key="{x:Static MenuItem.TopLevelHeaderTemplateKey}"
+                     TargetType="{x:Type MenuItem}">
+        <Border x:Name="Border" BorderThickness="1" Background="Transparent">
+            <Grid>
+                <ContentPresenter Margin="10,2,10,2"
+                                  ContentSource="Header"
+                                  RecognizesAccessKey="True" />
+                <Popup x:Name="Popup"
+                       Placement="Bottom"
+                       IsOpen="{TemplateBinding IsSubmenuOpen}"
+                       AllowsTransparency="True"
+                       Focusable="False"
+                       PopupAnimation="Fade">
+                    <Border x:Name="SubmenuBorder"
+                            SnapsToDevicePixels="True"
+                            BorderThickness="1"
+                            Background="{StaticResource nodeBgBrush}"
+                            BorderBrush="{StaticResource mainColorBrush}">
+                        <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto">
+                            <StackPanel IsItemsHost="True"
+                                        KeyboardNavigation.DirectionalNavigation="Cycle" />
+                        </ScrollViewer>
+                    </Border>
+                </Popup>
+            </Grid>
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsHighlighted" Value="true">
+                <Setter Property="BorderBrush" Value="{StaticResource mainColorBrush}" TargetName="Border"/>
+                <Setter Property="Background" Value="{StaticResource nodeBgHBrush}" TargetName="Border"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground">
+                    <Setter.Value>
+                        <SolidColorBrush Color="Gray" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
 
+    <!-- TopLevelItem -->
+    <ControlTemplate x:Key="{x:Static MenuItem.TopLevelItemTemplateKey}"
+                 TargetType="{x:Type MenuItem}">
+        <Border x:Name="Border" BorderThickness="1" Background="Transparent">
+            <ContentPresenter Margin="10,2,10,2"
+                              ContentSource="Header"
+                              RecognizesAccessKey="True" />
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsHighlighted" Value="true">
+                <Setter Property="BorderBrush" Value="{StaticResource mainColorBrush}" TargetName="Border"/>
+                <Setter Property="Background" Value="{StaticResource nodeBgHBrush}" TargetName="Border"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground">
+                    <Setter.Value>
+                        <SolidColorBrush Color="Gray" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <!-- SubmenuItem -->
+    <ControlTemplate x:Key="{x:Static MenuItem.SubmenuHeaderTemplateKey}"
+                 TargetType="{x:Type MenuItem}">
+        <Border x:Name="Border" BorderThickness="1" Background="Transparent">
+            <Grid>
+               <ContentPresenter x:Name="HeaderHost"
+                                 Margin="10,2,10,2"
+                                 ContentSource="Header"
+                                 HorizontalAlignment="Center"
+                                 RecognizesAccessKey="True" />
+                <Path HorizontalAlignment="Right" Margin="2"
+                      VerticalAlignment="Center"
+                      Data="M 0 0 L 0 10 L 5 5 Z" Fill="Black"/>
+                <Popup x:Name="Popup"
+                       Placement="Right"
+                       HorizontalOffset="0"
+                       IsOpen="{TemplateBinding IsSubmenuOpen}"
+                       AllowsTransparency="True"
+                       Focusable="False"
+                       PopupAnimation="Fade">
+                    <Border x:Name="SubmenuBorder"
+                            SnapsToDevicePixels="True"
+                            Background="{StaticResource nodeBgBrush}"
+                            BorderThickness="1"
+                            BorderBrush="{StaticResource mainColorBrush}">
+                        <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Hidden">
+                            <StackPanel IsItemsHost="True"
+                                        KeyboardNavigation.DirectionalNavigation="Cycle" />
+                        </ScrollViewer>
+                    </Border>
+                </Popup>
+            </Grid>
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsHighlighted" Value="true">
+                <Setter Property="BorderBrush" Value="{StaticResource mainColorBrush}" TargetName="Border"/>
+                <Setter Property="Background" Value="{StaticResource nodeBgHBrush}" TargetName="Border"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground">
+                    <Setter.Value>
+                        <SolidColorBrush Color="Gray" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    <ControlTemplate x:Key="{x:Static MenuItem.SubmenuItemTemplateKey}"
+                 TargetType="{x:Type MenuItem}">
+        <Border x:Name="Border" BorderThickness="1" Background="Transparent">
+            <ContentPresenter x:Name="HeaderHost"
+                              Margin="10,2,10,2"
+                              ContentSource="Header"
+                              HorizontalAlignment="Center"
+                              RecognizesAccessKey="True" />
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsHighlighted" Value="true">
+                <Setter Property="BorderBrush" Value="{StaticResource mainColorBrush}" TargetName="Border"/>
+                <Setter Property="Background" Value="{StaticResource nodeBgHBrush}" TargetName="Border"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground">
+                    <Setter.Value>
+                        <SolidColorBrush Color="Gray" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    <!-- MenuItem Style -->
+    <Style TargetType="{x:Type MenuItem}">
+        <Setter Property="MinWidth" Value="100"/>
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Style.Triggers>
+            <Trigger Property="Role" Value="TopLevelHeader">
+                <Setter Property="Template"
+                        Value="{StaticResource {x:Static MenuItem.TopLevelHeaderTemplateKey}}" />
+                <Setter Property="Grid.IsSharedSizeScope"
+                        Value="true" />
+            </Trigger>
+            <Trigger Property="Role" Value="TopLevelItem">
+                <Setter Property="Template"
+                        Value="{StaticResource {x:Static MenuItem.TopLevelItemTemplateKey}}" />
+            </Trigger>
+            <Trigger Property="Role" Value="SubmenuHeader">
+                <Setter Property="Template"
+                        Value="{StaticResource {x:Static MenuItem.SubmenuHeaderTemplateKey}}" />
+            </Trigger>
+            <Trigger Property="Role" Value="SubmenuItem">
+                <Setter Property="Template"
+                        Value="{StaticResource {x:Static MenuItem.SubmenuItemTemplateKey}}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    
     <!--通用按钮样式-->
     <ControlTemplate x:Key="generalButtonTemplate" TargetType="{x:Type Button}">
         <Border x:Name="BD" BorderThickness="1" CornerRadius="4"
