--- a/Controls/Panel/FlowChartContainer.xaml
+++ b/Controls/Panel/FlowChartContainer.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MultiBranchTexter.Controls.FlowChartContainer"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-             Loaded="UserControl_Loaded"
-             >
+﻿<c:FlowChartBase x:Class="MultiBranchTexter.Controls.FlowChartContainer"
+                 x:Name="FCC"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:c="clr-namespace:MultiBranchTexter.Controls"
+                 Loaded="UserControl_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -23,10 +23,30 @@
                               HorizontalAlignment="Left" 
                               VerticalAlignment="Top">
                 <c:AutoSizeCanvas.LayoutTransform>
-                    <ScaleTransform ScaleX="{Binding ScaleRatio, RelativeSource={RelativeSource AncestorType={x:Type c:AutoSizeCanvas}, Mode=FindAncestor}}" 
-                                    ScaleY="{Binding ScaleRatio, RelativeSource={RelativeSource AncestorType={x:Type c:AutoSizeCanvas}, Mode=FindAncestor}}"/>
+                    <ScaleTransform ScaleX="{Binding ScaleRatio, 
+                        RelativeSource={RelativeSource AncestorType={x:Type c:AutoSizeCanvas}, 
+                        Mode=FindAncestor}}" 
+                                    ScaleY="{Binding ScaleRatio, 
+                        RelativeSource={RelativeSource AncestorType={x:Type c:AutoSizeCanvas}, 
+                        Mode=FindAncestor}}"/>
                 </c:AutoSizeCanvas.LayoutTransform>
             </c:AutoSizeCanvas>
+            <ScrollViewer.ContextMenu>
+                <ContextMenu x:Name="sv_cm">
+                    <MenuItem x:Name="addNodeItem" Header="新建节点" Click="addItem_Click"/>
+                    <MenuItem x:Name="unitXMenuItem" Header="统一横坐标">
+                        <MenuItem x:Name="xavg" Header="平均值" Click="XItem_Click"/>
+                        <MenuItem x:Name="xmin" Header="最小值" Click="XItem_Click"/>
+                        <MenuItem x:Name="xmax" Header="最大值" Click="XItem_Click"/>
+                    </MenuItem>
+                    <MenuItem x:Name="unitYMenuItem" Header="统一纵坐标">
+                        <MenuItem x:Name="yavg" Header="平均值" Click="YItem_Click"/>
+                        <MenuItem x:Name="ymin" Header="最小值" Click="YItem_Click"/>
+                        <MenuItem x:Name="ymax" Header="最大值" Click="YItem_Click"/>
+                    </MenuItem>
+                    <MenuItem x:Name="deleteItem" Header="删除节点" Click="deleteItem_Click"/>
+                </ContextMenu>
+            </ScrollViewer.ContextMenu>
         </ScrollViewer>
         <!--搜索框-->
         <c:NodeSearchBox x:Name="searchBox" Visibility="Hidden"
@@ -51,4 +71,4 @@
                        VerticalAlignment="Center"/>
         </StackPanel>
     </Grid>
-</UserControl>
+</c:FlowChartBase>
